Wed Sep 02 14:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/Coder.m: ([-decodeObject:]) fixed to autorelease as it should.
	* src/NSCalendarDate.m, src/NSException.m, src/NSGAttributedString.m,
	src/NSHost.m, src/NSLog.m, src/NSProcessInfo.m, src/NSTimeZone.m:
	tidied coding/decoding and logging.
	* src/NSString.m: Added implementation of [-zone] for constnat strings.

Wed Sep 02 13:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSRunLoop.m: ([-cancelPerformSelector:target:argument:]) bugfix
	supplied by masata-y@is.aist-nara.ac.jp - was incrementing loop index
	when should have been decrementing.

Mon Aug 24 09:22:17 1998  Adam Fedor  <fedor@ultra.doc.com>

	* doc/gnustep-base.tmpl.texi: Fix up doc problems.
	* doc/todo.tmpl.texi: Likewise.

Thu Aug 20 11:50:23 1998  Adam Fedor  <fedor@doc.com>

	* src/mframe.m (mframe_next_arg): Fixes from Richard
	Frith-Macdonald <richard@brainstorm.co.uk>. 

Tud Aug 13 21:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Rewrite of maframe stuff and associated things to get DO and
	NSInvocations working for ALL data types.  Configuration files for
	GNU/Linux on a PC and sunos4.1.3 on sparc provided (and tested).

	* src/NSObject: Fixed code to local reference counts to get object
	alignment right on machines that have strict restrictions on the
	alignment of doubles (eg sparc).
	Also updated forwarding of invocations to work with new code.
	* src/NSInvocation.m: Rewrite from scratch to use new mframe code.
	* src/NSMethodSignature.m: Rewrite from scratch to use new mframe code.
	* src/mframe.m: Modified to use new information set up by config
	* configure.in: Run configure in src/mframe
	* src/mframe: New configuration directory for mframe stuff.
	* src/include/mframe.h: Deleted - now generated by config process.

Wed Aug 12 14:55:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSBundle: ([+initialize]) modified to take account of the