@@ -1,3 +1,8 @@
+Mon Aug 31 16:28:58 1998  Adam Fedor  <fedor@ultra.doc.com>
+
+	* src/NSBundle.m (+mainBundle:): Remove *_obj directory to
+	find main bundle path.
+
 Wed Sep 02 14:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* src/Coder.m: ([-decodeObject:]) fixed to autorelease as it should.
